<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_register"
    tools:context=".login">

    <TextView
        android:id="@+id/textView2"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:layout_width="217dp"
        android:layout_height="277dp"
        android:layout_marginStart="208dp"
        android:contentDescription="marte difuminado"
        android:src="@drawable/marslogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"></ImageView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:textColorHint="@color/black"
        android:background="@drawable/rounded_input_text"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_input_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"></EditText>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins"
        android:text="@string/signin"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"></Button>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_input_text"
        android:fontFamily="@font/poppins"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="1.0"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>