<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_query"
    tools:context=".Querying_sun">

    <ImageButton
        android:id="@+id/btnbackMenuSol"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_back"
        android:contentDescription="ir a menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/querying_sol"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnbackMenuSol"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <Spinner
        android:id="@+id/spnCamara"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/style_spinner"
        android:paddingStart="20dp"
        android:entries="@array/camaras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="300dp"
        android:inputType="number"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_input_text"
        android:hint="@string/sol_martian"
        android:paddingStart="20dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"></EditText>

    <EditText
        android:id="@+id/edtSolMarciano"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:fontFamily="@font/poppins"
        android:background="@drawable/rounded_input_text"
        android:hint="@string/page"
        android:paddingStart="20dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCamara"></EditText>

    <Button
        android:id="@+id/btnManifestSol"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_button"
        android:text="@string/launch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSolMarciano"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>