<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_menu_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/settings"
        android:contentDescription="ir a layout settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"></TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/black"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="283dp"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/consult_date"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="293dp"></TextView>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="ir a layout date"
                android:layout_marginStart="55dp"
                android:background="@drawable/next"></ImageButton>
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/black"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="364dp"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/black"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="283dp"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins"
                android:paddingTop="13sp"
                android:text="@string/go_favorites"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="293dp"></TextView>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="55dp"
                android:background="@drawable/next"
                android:contentDescription="ir a layout sun"></ImageButton>
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/black"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="364dp"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/black"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="283dp"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/consult_sun"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="293dp"></TextView>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="55dp"
                android:background="@drawable/next"
                android:contentDescription="ir a layout favorites"></ImageButton>
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/black"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="364dp"></View>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>